--- a/config.properties
+++ b/config.properties
@@ -1,7 +1,7 @@
 #Mon Jul 31 09:02:51 GST 2017
-contactParser=jac
-groupParser=jac
+contactParser=dom
+groupParser=dom
 
-//DOM, SAX
+//DOM, SAX, JAC
 
 
