--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,7 @@
 #Mon Jul 31 09:02:51 GST 2017
-contactParser=sax
-groupParser=sax
+contactParser=dom
+groupParser=dom
 
-
-//DOM, SAX, JAC
+//DOM, SAX, JAC <---- тип парсера
 
 
