--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,6 @@
 #Mon Jul 31 09:02:51 GST 2017
-contactParser=jac
-groupParser=jac
+contactParser=sax
+groupParser=sax
 
 //DOM, SAX, JAC <---- тип парсера
 
