--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>war</packaging>
     <groupId>task1.directory</groupId>
     <artifactId>directory</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -12,6 +13,7 @@
     <properties>
         <postgresql.version>42.0.0</postgresql.version>
         <junit>4.11</junit>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <build>
@@ -19,14 +21,70 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.6.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                <source>1.7</source>
+                <target>1.7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <path>/</path>
+                    <port>9999</port>
+                </configuration>
+
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>tomcat-run</id>-->
+                        <!--<goals>-->
+                            <!--<goal>exec-war-only</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>package</phase>-->
+                        <!--<configuration>-->
+                            <!--<warRunDependencies>-->
+                                <!--<warRunDependency>-->
+                                    <!--<dependency>-->
+                                        <!--<groupId>task1.directory</groupId>-->
+                                        <!--<artifactId>directory</artifactId>-->
+                                        <!--<version>1.0-SNAPSHOT</version>-->
+                                        <!--<type>war</type>-->
+                                    <!--</dependency>-->
+                                    <!--<contextPath>/</contextPath>-->
+                                <!--</warRunDependency>-->
+                            <!--</warRunDependencies>-->
+                            <!--<enableNaming>true</enableNaming>-->
+                            <!--<extraDependencies>-->
+                                <!--<extraDependency>-->
+                                    <!--<dependency>-->
+                                        <!--<groupId>org.postgresql</groupId>-->
+                                        <!--<artifactId>postgresql</artifactId>-->
+                                        <!--<version>${postgresql.version}</version>-->
+                                    <!--</dependency>-->
+                                        <!--<dependency>-->
+                                            <!--<groupId>javax.servlet</groupId>-->
+                                            <!--<artifactId>javax.servlet-api</artifactId>-->
+                                            <!--<version>3.1.0</version>-->
+                                        <!--</dependency>-->
+                                <!--</extraDependency>-->
+                            <!--</extraDependencies>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
-
 
 
 
@@ -39,35 +97,19 @@
             <version>1.2.17</version>
         </dependency>
 
-        <!--&lt;!&ndash;TEST&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<version>${junit}</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <type>pom</type>
+        </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
-        <!--&lt;!&ndash;jackson&ndash;&gt;-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
-            <!--<artifactId>jackson-dataformat-xml</artifactId>-->
-        <!--<version>2.6.3</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-        <!--<groupId>org.apache.commons</groupId>-->
-        <!--<artifactId>commons-lang3</artifactId>-->
-        <!--<version>3.4</version>-->
-    <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.dataformat</groupId>-->
-            <!--<artifactId>jackson-dataformat-xml</artifactId>-->
-            <!--<version>2.9.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.codehaus.woodstox</groupId>-->
-            <!--<artifactId>woodstox-core-asl</artifactId>-->
-            <!--<version>4.4.1</version>-->
-        <!--</dependency>-->
 
         <!-- DATABASE -->
 
@@ -77,6 +119,32 @@
             <version>42.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>taglibs</groupId>
+            <artifactId>standard</artifactId>
+            <version>1.1.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations-java5</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+
     </dependencies>
 
+
+
+
+
+
 </project>
+<!--<plugin>-->
+
+<!--</plugin>-->
