--- a/pom.xml
+++ b/pom.xml
@@ -31,49 +31,20 @@
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.postgresql</groupId>
+                        <artifactId>postgresql</artifactId>
+                        <version>42.0.0</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
-                    <path>/</path>
-                    <port>9999</port>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <path>/startServlet</path>
                 </configuration>
-
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>tomcat-run</id>-->
-                        <!--<goals>-->
-                            <!--<goal>exec-war-only</goal>-->
-                        <!--</goals>-->
-                        <!--<phase>package</phase>-->
-                        <!--<configuration>-->
-                            <!--<warRunDependencies>-->
-                                <!--<warRunDependency>-->
-                                    <!--<dependency>-->
-                                        <!--<groupId>task1.directory</groupId>-->
-                                        <!--<artifactId>directory</artifactId>-->
-                                        <!--<version>1.0-SNAPSHOT</version>-->
-                                        <!--<type>war</type>-->
-                                    <!--</dependency>-->
-                                    <!--<contextPath>/</contextPath>-->
-                                <!--</warRunDependency>-->
-                            <!--</warRunDependencies>-->
-                            <!--<enableNaming>true</enableNaming>-->
-                            <!--<extraDependencies>-->
-                                <!--<extraDependency>-->
-                                    <!--<dependency>-->
-                                        <!--<groupId>org.postgresql</groupId>-->
-                                        <!--<artifactId>postgresql</artifactId>-->
-                                        <!--<version>${postgresql.version}</version>-->
-                                    <!--</dependency>-->
-                                        <!--<dependency>-->
-                                            <!--<groupId>javax.servlet</groupId>-->
-                                            <!--<artifactId>javax.servlet-api</artifactId>-->
-                                            <!--<version>3.1.0</version>-->
-                                        <!--</dependency>-->
-                                <!--</extraDependency>-->
-                            <!--</extraDependencies>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
@@ -82,7 +53,6 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
@@ -139,12 +109,4 @@
 
     </dependencies>
 
-
-
-
-
-
 </project>
-<!--<plugin>-->
-
-<!--</plugin>-->
