--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-
+    <welcome-file-list>
+        <welcome-file>/loginPage.html</welcome-file>
+    </welcome-file-list>
 
     <resource-ref>
         <description>postgreSQL Datasource example</description>
@@ -12,5 +14,7 @@
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
     </resource-ref>
+
+
 
 </web-app>
