--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,16 +4,26 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
-    <welcome-file-list>
-        <welcome-file>/loginPage.html</welcome-file>
-    </welcome-file-list>
+    <!--<display-name>Directory Manager</display-name>-->
 
-    <resource-ref>
-        <description>postgreSQL Datasource example</description>
-        <res-ref-name>jdbc/postgres</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>
+    <!--<servlet>-->
+        <!--<servlet-name>mvc-dispatcher</servlet-name>-->
+        <!--<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>-->
+        <!--<load-on-startup>1</load-on-startup>-->
+    <!--</servlet>-->
+
+    <!--<servlet-mapping>-->
+        <!--<servlet-name>mvc-dispatcher</servlet-name>-->
+        <!--<url-pattern>/startServlet</url-pattern>-->
+    <!--</servlet-mapping>-->
+
+
+    <!--<resource-ref>-->
+        <!--<description>postgreSQL Datasource example</description>-->
+        <!--<res-ref-name>jdbc/postgres</res-ref-name>-->
+        <!--<res-type>jasql.sql.sql.DataSource</res-type>-->
+        <!--<res-auth>Container</res-auth>-->
+    <!--</resource-ref>-->
 
 
 
