--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,11 +7,10 @@
 
     <display-name>Directory Manager</display-name>
 
-
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/mvc-dispatcher-servlet.xml
+            /WEB-INF/loading.xml
             /WEB-INF/security.xml
         </param-value>
     </context-param>
@@ -30,25 +29,6 @@
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
-    <!--<listener>-->
-        <!--<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>-->
-    <!--</listener>-->
-    <!--<context-param>-->
-        <!--<param-name>log4jConfigLocation</param-name>-->
-        <!--<param-value>/WEB-INF/log4j.properties</param-value>-->
-    <!--</context-param>-->
-    <!--<listener>-->
-        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
-    <!--</listener>-->
-
-    <!--<resource-ref>-->
-        <!--<description>postgreSQL Datasource example</description>-->
-        <!--<res-ref-name>jdbc/postgres</res-ref-name>-->
-        <!--<res-type>jasql.sql.sql.DataSource</res-type>-->
-        <!--<res-auth>Container</res-auth>-->
-    <!--</resource-ref>-->
-
-
     <servlet>
         <servlet-name>mvc-dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
