--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            /WEB-INF/loading.xml
+            /WEB-INF/applicationContext.xml
             /WEB-INF/security.xml
         </param-value>
     </context-param>
