--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                     <version>2.4</version>
                     <configuration>
                         <warSourceDirectory>src/main/webapp</warSourceDirectory>
-                        <warName>directory</warName>
+                        <warName>directory/loginPage.jsp</warName>
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                     </configuration>
                 </plugin>
