--- a/src/resources/application.properties
+++ b/src/resources/application.properties
@@ -3,13 +3,13 @@ jdbc.driverClassName = org.postgresql.Driver
 jdbc.url = jdbc:postgresql://localhost:5432/directory
 jdbc.username = postgres
 jdbc.password = root
-hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
-hibernate.show_sql = true
-hibernate.format_sql = true
 
 #Hibernate
-#hibernate.dialect=org.hibernate.dialect.HSQLDialect
+current_session_context_class = thread
+hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+hibernate.show_sql = true
+hbm2ddl.auto = update
+hibernate.format_sql = true
 #hibernate.hbm2ddl.auto=create-drop
-#hibernate.show_sql=true
 #hibernate.batch.size=20
 #hibernate.current.session.context.class=org.springframework.orm.hibernate5.SpringSessionContext
